src/lexer.cpp
/* Generated by re2c 3.0 on Sun Dec  1 16:28:26 2024 */
#line 1 "lexer.re"
#include "token.h"
namespace iedb {

    static token_type lexer_token(const char * start,const char *end,int& len){
         const char * YYCURSOR = start;
         const char * YYMARKER = YYCURSOR;
         const char * YYLIMIT = end;
         token_type type = token_type::error;
         
#line 13 "lexer.cpp"
{
	char yych;
	yych = *YYCURSOR;
	switch (yych) {
		case '\t':
		case '\n':
		case '\r':
		case ' ': goto yy2;
		case '!': goto yy4;
		case '&': goto yy6;
		case '\'': goto yy7;
		case '(': goto yy8;
		case ')': goto yy9;
		case '*': goto yy10;
		case '+': goto yy11;
		case ',': goto yy12;
		case '-': goto yy13;
		case '.': goto yy14;
		case '/': goto yy15;
		case '0': goto yy16;
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy18;
		case ';': goto yy20;
		case '<': goto yy21;
		case '=': goto yy23;
		case '>': goto yy24;
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'e':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'p':
		case 'q':
		case 'r':
		case 't':
		case 'v':
		case 'x':
		case 'y':
		case 'z': goto yy26;
		case '[': goto yy29;
		case ']': goto yy30;
		case 'a': goto yy31;
		case 'b': goto yy32;
		case 'c': goto yy33;
		case 'd': goto yy34;
		case 'f': goto yy35;
		case 'g': goto yy36;
		case 'n': goto yy37;
		case 'o': goto yy38;
		case 's': goto yy39;
		case 'u': goto yy40;
		case 'w': goto yy41;
		case '{': goto yy42;
		case '|': goto yy43;
		case '}': goto yy44;
		default: goto yy1;
	}
yy1:
	++YYCURSOR;
#line 53 "lexer.re"
	{printf("something wrong start at %s\n",start);type = token_type::error;len = 1;return type;}
#line 111 "lexer.cpp"
yy2:
	yych = *++YYCURSOR;
	switch (yych) {
		case '\t':
		case '\n':
		case '\r':
		case ' ': goto yy2;
		default: goto yy3;
	}
yy3:
#line 47 "lexer.re"
	{type = token_type::space; len = static_cast<uint32>(YYCURSOR - start);return type;}
#line 124 "lexer.cpp"
yy4:
	yych = *++YYCURSOR;
	switch (yych) {
		case '=': goto yy45;
		default: goto yy5;
	}
yy5:
#line 31 "lexer.re"
	{type = token_type::bang; len = static_cast<uint32>(YYCURSOR - start);return type;}
#line 134 "lexer.cpp"
yy6:
	++YYCURSOR;
#line 34 "lexer.re"
	{type = token_type::bit_and; len = static_cast<uint32>(YYCURSOR - start);return type;}
#line 139 "lexer.cpp"
yy7:
	yych = *++YYCURSOR;
	switch (yych) {
		case '\'': goto yy46;
		default: goto yy7;
	}
yy8:
	++YYCURSOR;
#line 16 "lexer.re"
	{type = token_type::parenthesis_left; len = static_cast<uint32>(YYCURSOR - start);return type;}
#line 150 "lexer.cpp"
yy9:
	++YYCURSOR;
#line 17 "lexer.re"
	{type = token_type::parenthesis_right; len = static_cast<uint32>(YYCURSOR - start);return type;}
#line 155 "lexer.cpp"
yy10:
	++YYCURSOR;
#line 24 "lexer.re"
	{type = token_type::star; len = static_cast<uint32>(YYCURSOR - start);return type;}
#line 160 "lexer.cpp"
yy11:
	++YYCURSOR;
#line 22 "lexer.re"
	{type = token_type::plus; len = static_cast<uint32>(YYCURSOR - start);return type;}
#line 165 "lexer.cpp"
yy12:
	++YYCURSOR;
#line 13 "lexer.re"
	{type = token_type::comma; len = static_cast<uint32>(YYCURSOR - start);return type;}
#line 170 "lexer.cpp"
yy13:
	++YYCURSOR;
#line 23 "lexer.re"
	{type = token_type::minus; len = static_cast<uint32>(YYCURSOR - start);return type;}
#line 175 "lexer.cpp"
yy14:
	++YYCURSOR;
#line 15 "lexer.re"
	{type = token_type::dot; len = static_cast<uint32>(YYCURSOR - start);return type;}
#line 180 "lexer.cpp"
yy15:
	++YYCURSOR;
#line 25 "lexer.re"
	{type = token_type::slash; len = static_cast<uint32>(YYCURSOR - start);return type;}
#line 185 "lexer.cpp"
yy16:
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
		case 'X':
		case 'x': goto yy49;
		default: goto yy19;
	}
yy17:
#line 49 "lexer.re"
	{type = token_type::number_int; len = static_cast<uint32>(YYCURSOR - start);return type;}
#line 196 "lexer.cpp"
yy18:
	yych = *(YYMARKER = ++YYCURSOR);
yy19:
	switch (yych) {
		case '.': goto yy47;
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy18;
		default: goto yy17;
	}
yy20:
	++YYCURSOR;
#line 14 "lexer.re"
	{type = token_type::semi; len = static_cast<uint32>(YYCURSOR - start);return type;}
#line 218 "lexer.cpp"
yy21:
	yych = *++YYCURSOR;
	switch (yych) {
		case '=': goto yy50;
		default: goto yy22;
	}
yy22:
#line 28 "lexer.re"
	{type = token_type::less; len = static_cast<uint32>(YYCURSOR - start);return type;}
#line 228 "lexer.cpp"
yy23:
	++YYCURSOR;
#line 32 "lexer.re"
	{type = token_type::equal; len = static_cast<uint32>(YYCURSOR - start);return type;}
#line 233 "lexer.cpp"
yy24:
	yych = *++YYCURSOR;
	switch (yych) {
		case '=': goto yy51;
		default: goto yy25;
	}
yy25:
#line 27 "lexer.re"
	{type = token_type::more; len = static_cast<uint32>(YYCURSOR - start);return type;}
#line 243 "lexer.cpp"
yy26:
	yych = *++YYCURSOR;
yy27:
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy26;
		default: goto yy28;
	}
yy28:
#line 51 "lexer.re"
	{type = token_type::name; len = static_cast<uint32>(YYCURSOR - start);return type;}
#line 316 "lexer.cpp"
yy29:
	++YYCURSOR;
#line 18 "lexer.re"
	{type = token_type::bracket_left; len = static_cast<uint32>(YYCURSOR - start);return type;}
#line 321 "lexer.cpp"
yy30:
	++YYCURSOR;
#line 19 "lexer.re"
	{type = token_type::bracket_right; len = static_cast<uint32>(YYCURSOR - start);return type;}
#line 326 "lexer.cpp"
yy31:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'n': goto yy52;
		default: goto yy27;
	}
yy32:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'y': goto yy53;
		default: goto yy27;
	}
yy33:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'r': goto yy55;
		default: goto yy27;
	}
yy34:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'e': goto yy56;
		default: goto yy27;
	}
yy35:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'r': goto yy57;
		default: goto yy27;
	}
yy36:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'r': goto yy58;
		default: goto yy27;
	}
yy37:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'o': goto yy59;
		default: goto yy27;
	}
yy38:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'r': goto yy60;
		default: goto yy27;
	}
yy39:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'e': goto yy62;
		default: goto yy27;
	}
yy40:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'p': goto yy63;
		default: goto yy27;
	}
yy41:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'h': goto yy64;
		default: goto yy27;
	}
yy42:
	++YYCURSOR;
#line 20 "lexer.re"
	{type = token_type::brace_left; len = static_cast<uint32>(YYCURSOR - start);return type;}
#line 397 "lexer.cpp"
yy43:
	++YYCURSOR;
#line 33 "lexer.re"
	{type = token_type::bit_or; len = static_cast<uint32>(YYCURSOR - start);return type;}
#line 402 "lexer.cpp"
yy44:
	++YYCURSOR;
#line 21 "lexer.re"
	{type = token_type::brace_right; len = static_cast<uint32>(YYCURSOR - start);return type;}
#line 407 "lexer.cpp"
yy45:
	++YYCURSOR;
#line 30 "lexer.re"
	{type = token_type::not_equal; len = static_cast<uint32>(YYCURSOR - start);return type;}
#line 412 "lexer.cpp"
yy46:
	++YYCURSOR;
#line 50 "lexer.re"
	{type = token_type::string; len = static_cast<uint32>(YYCURSOR - start);return type;}
#line 417 "lexer.cpp"
yy47:
	yych = *++YYCURSOR;
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy65;
		default: goto yy48;
	}
yy48:
	YYCURSOR = YYMARKER;
	goto yy17;
yy49:
	yych = *++YYCURSOR;
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f': goto yy67;
		default: goto yy48;
	}
yy50:
	++YYCURSOR;
#line 29 "lexer.re"
	{type = token_type::less_equal; len = static_cast<uint32>(YYCURSOR - start);return type;}
#line 467 "lexer.cpp"
yy51:
	++YYCURSOR;
#line 26 "lexer.re"
	{type = token_type::more_equal; len = static_cast<uint32>(YYCURSOR - start);return type;}
#line 472 "lexer.cpp"
yy52:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'd': goto yy69;
		default: goto yy27;
	}
yy53:
	yych = *++YYCURSOR;
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy26;
		default: goto yy54;
	}
yy54:
#line 46 "lexer.re"
	{type = token_type::by; len = static_cast<uint32>(YYCURSOR - start);return type;}
#line 550 "lexer.cpp"
yy55:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'e': goto yy71;
		default: goto yy27;
	}
yy56:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'l': goto yy72;
		default: goto yy27;
	}
yy57:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'o': goto yy73;
		default: goto yy27;
	}
yy58:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'o': goto yy74;
		default: goto yy27;
	}
yy59:
	yych = *++YYCURSOR;
	switch (yych) {
		case 't': goto yy75;
		default: goto yy27;
	}
yy60:
	yych = *++YYCURSOR;
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy26;
		case 'd': goto yy77;
		default: goto yy61;
	}
yy61:
#line 37 "lexer.re"
	{type = token_type::Or; len = static_cast<uint32>(YYCURSOR - start);return type;}
#line 652 "lexer.cpp"
yy62:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'l': goto yy78;
		default: goto yy27;
	}
yy63:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'd': goto yy79;
		default: goto yy27;
	}
yy64:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'e': goto yy80;
		default: goto yy27;
	}
yy65:
	yych = *++YYCURSOR;
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy65;
		default: goto yy66;
	}
yy66:
#line 48 "lexer.re"
	{type = token_type::number_float; len = static_cast<uint32>(YYCURSOR - start);return type;}
#line 689 "lexer.cpp"
yy67:
	yych = *++YYCURSOR;
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f': goto yy67;
		default: goto yy68;
	}
yy68:
#line 52 "lexer.re"
	{type = token_type::hex; len = static_cast<uint32>(YYCURSOR - start);return type;}
#line 720 "lexer.cpp"
yy69:
	yych = *++YYCURSOR;
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy26;
		default: goto yy70;
	}
yy70:
#line 36 "lexer.re"
	{type = token_type::And; len = static_cast<uint32>(YYCURSOR - start);return type;}
#line 792 "lexer.cpp"
yy71:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'a': goto yy81;
		default: goto yy27;
	}
yy72:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'e': goto yy82;
		default: goto yy27;
	}
yy73:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'm': goto yy83;
		default: goto yy27;
	}
yy74:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'u': goto yy85;
		default: goto yy27;
	}
yy75:
	yych = *++YYCURSOR;
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy26;
		default: goto yy76;
	}
yy76:
#line 35 "lexer.re"
	{type = token_type::Not; len = static_cast<uint32>(YYCURSOR - start);return type;}
#line 888 "lexer.cpp"
yy77:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'e': goto yy86;
		default: goto yy27;
	}
yy78:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'e': goto yy87;
		default: goto yy27;
	}
yy79:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'a': goto yy88;
		default: goto yy27;
	}
yy80:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'r': goto yy89;
		default: goto yy27;
	}
yy81:
	yych = *++YYCURSOR;
	switch (yych) {
		case 't': goto yy90;
		default: goto yy27;
	}
yy82:
	yych = *++YYCURSOR;
	switch (yych) {
		case 't': goto yy91;
		default: goto yy27;
	}
yy83:
	yych = *++YYCURSOR;
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy26;
		default: goto yy84;
	}
yy84:
#line 42 "lexer.re"
	{type = token_type::from; len = static_cast<uint32>(YYCURSOR - start);return type;}
#line 996 "lexer.cpp"
yy85:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'p': goto yy92;
		default: goto yy27;
	}
yy86:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'r': goto yy94;
		default: goto yy27;
	}
yy87:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'c': goto yy96;
		default: goto yy27;
	}
yy88:
	yych = *++YYCURSOR;
	switch (yych) {
		case 't': goto yy97;
		default: goto yy27;
	}
yy89:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'e': goto yy98;
		default: goto yy27;
	}
yy90:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'e': goto yy100;
		default: goto yy27;
	}
yy91:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'e': goto yy102;
		default: goto yy27;
	}
yy92:
	yych = *++YYCURSOR;
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy26;
		default: goto yy93;
	}
yy93:
#line 45 "lexer.re"
	{type = token_type::group; len = static_cast<uint32>(YYCURSOR - start);return type;}
#line 1110 "lexer.cpp"
yy94:
	yych = *++YYCURSOR;
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy26;
		default: goto yy95;
	}
yy95:
#line 44 "lexer.re"
	{type = token_type::order; len = static_cast<uint32>(YYCURSOR - start);return type;}
#line 1182 "lexer.cpp"
yy96:
	yych = *++YYCURSOR;
	switch (yych) {
		case 't': goto yy104;
		default: goto yy27;
	}
yy97:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'e': goto yy106;
		default: goto yy27;
	}
yy98:
	yych = *++YYCURSOR;
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy26;
		default: goto yy99;
	}
yy99:
#line 43 "lexer.re"
	{type = token_type::where; len = static_cast<uint32>(YYCURSOR - start);return type;}
#line 1266 "lexer.cpp"
yy100:
	yych = *++YYCURSOR;
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy26;
		default: goto yy101;
	}
yy101:
#line 39 "lexer.re"
	{type = token_type::create; len = static_cast<uint32>(YYCURSOR - start);return type;}
#line 1338 "lexer.cpp"
yy102:
	yych = *++YYCURSOR;
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy26;
		default: goto yy103;
	}
yy103:
#line 41 "lexer.re"
